--- a/primeras_practicas.ipynb
+++ b/primeras_practicas.ipynb
@@ -11,7 +11,7 @@
     "1. Asegurar que se tiene instalado pip. Para asegurarse de que está installado se ejecuta el siguiente comando: `py -m pip install --upgrade pip`.\n",
     "2. Instalar ***virtualenv*** con el comando: `py -m pip install --user virtualenv`.\n",
     "3. Se crea el ambiente virtual ***lab_modelacion*** con el comando: `py -m venv lab_modelacion`.\n",
-    "4. Se activa el ambiente virtual con el comando: `.\\env\\Scripts\\activate`.\n",
+    "4. Se activa el ambiente virtual con el comando: `.\\lab_modelacion\\Scripts\\activate`.\n",
     "\n",
     "## Cómo manejar un proyecto en github\n",
     "\n",
